carbidev/com.nokia.tools.variant.confml.expressions_1.0.0.v20090225_01-11/src/com/nokia/tools/variant/confml/expressions/settings/ConfmlParser.java
/*
 * Copyright (c) 2009 Nokia Corporation and/or its subsidiary(-ies). 
 * All rights reserved.
 * This component and the accompanying materials are made available
 * under the terms of "Eclipse Public License v1.0"
 * which accompanies this distribution, and is available
 * at the URL "http://www.eclipse.org/legal/epl-v10.html".
 * 
 * Initial Contributors:
 * Nokia Corporation - Initial contribution
 * 
 * Contributors:
 * 
 * Description: This file is part of com.nokia.tools.variant.confml.expressions component.
 */

// $ANTLR 3.0.1 C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g 2009-01-09 10:43:47
 
package com.nokia.tools.variant.confml.expressions.settings;
  
import java.util.HashSet;
import java.util.Set;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.eclipse.emf.common.util.EList;

import com.nokia.tools.variant.content.confml.SequenceItem;
import com.nokia.tools.variant.content.confml.SequenceSetting;
import com.nokia.tools.variant.content.confml.Setting;
import com.nokia.tools.variant.content.confml.View;

public class ConfmlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEWLINE", "Literal", "Number", "Ref", "WS", "'or'", "'and'", "'='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'div'", "'mod'", "'('", "')'", "'.'", "'/'", "'['", "']'"
    };
    public static final int Ref=7;
    public static final int WS=8;
    public static final int Literal=5;
    public static final int NEWLINE=4;
    public static final int Number=6;
    public static final int EOF=-1;

        public ConfmlParser(TokenStream input) {
            super(input);
        }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g"; }


      private View view;

      public void setView(View view) {
        this.view = view;
      }
      
      public View getView() {
        return view;
      }

      private SequenceItem sequenceItem;
      
      public SequenceItem getSequenceItem() {
        return sequenceItem;
      }
      
      public void setSequenceItem(SequenceItem si) {
        this.sequenceItem = si;
      }
      
      private Setting setting;
      
      public void setSetting(Setting setting) {
        this.setting = setting;
      }
      
      public Setting getSetting() {
        return setting;
      }
      
      
      private String featureRef;
      
      public void setFeatureRef(String featureRef) {
        this.featureRef = featureRef;
      }
      
      public String getFeatureRef() {
        return featureRef; 
      }



    // $ANTLR start expr
    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:60:1: expr returns [Set<Setting> settings] : (e= orExpr NEWLINE )* ;
    public final Set<Setting> expr() throws RecognitionException {
        Set<Setting> settings = null;

        Set<Setting> e = null;


        try {
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:60:37: ( (e= orExpr NEWLINE )* )
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:61:3: (e= orExpr NEWLINE )*
            {
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:61:3: (e= orExpr NEWLINE )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=Literal && LA1_0<=Ref)||LA1_0==18||LA1_0==22||LA1_0==24) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:61:4: e= orExpr NEWLINE
            	    {
            	    pushFollow(FOLLOW_orExpr_in_expr44);
            	    e=orExpr();
            	    _fsp--;

            	    match(input,NEWLINE,FOLLOW_NEWLINE_in_expr46); 

            	                                        settings = e;
            	                                      

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return settings;
    }
    // $ANTLR end expr


    // $ANTLR start orExpr
    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:67:1: orExpr returns [Set<Setting> settings] : e1= andExpr ( 'or' e2= andExpr )* ;
    public final Set<Setting> orExpr() throws RecognitionException {
        Set<Setting> settings = null;

        Set<Setting> e1 = null;

        Set<Setting> e2 = null;


        try {
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:67:39: (e1= andExpr ( 'or' e2= andExpr )* )
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:68:3: e1= andExpr ( 'or' e2= andExpr )*
            {
            pushFollow(FOLLOW_andExpr_in_orExpr81);
            e1=andExpr();
            _fsp--;

              
                                                settings = e1;
                                              
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:71:3: ( 'or' e2= andExpr )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==9) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:72:5: 'or' e2= andExpr
            	    {
            	    match(input,9,FOLLOW_9_in_orExpr112); 
            	    pushFollow(FOLLOW_andExpr_in_orExpr119);
            	    e2=andExpr();
            	    _fsp--;


            	                                        settings.addAll(e2);
            	                                      

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return settings;
    }
    // $ANTLR end orExpr


    // $ANTLR start andExpr
    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:78:1: andExpr returns [Set<Setting> settings] : e1= equalityExpr ( 'and' e2= equalityExpr )* ;
    public final Set<Setting> andExpr() throws RecognitionException {
        Set<Setting> settings = null;

        Set<Setting> e1 = null;

        Set<Setting> e2 = null;


        try {
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:78:40: (e1= equalityExpr ( 'and' e2= equalityExpr )* )
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:79:3: e1= equalityExpr ( 'and' e2= equalityExpr )*
            {
            pushFollow(FOLLOW_equalityExpr_in_andExpr155);
            e1=equalityExpr();
            _fsp--;


                                                settings = e1;
                                              
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:82:3: ( 'and' e2= equalityExpr )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==10) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:83:5: 'and' e2= equalityExpr
            	    {
            	    match(input,10,FOLLOW_10_in_andExpr181); 
            	    pushFollow(FOLLOW_equalityExpr_in_andExpr187);
            	    e2=equalityExpr();
            	    _fsp--;


            	                                        settings.addAll(e2);
            	                                      

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return settings;
    }
    // $ANTLR end andExpr


    // $ANTLR start equalityExpr
    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:89:1: equalityExpr returns [Set<Setting> settings] : e1= relationalExpr ( '=' e2= relationalExpr | '!=' e2= relationalExpr )* ;
    public final Set<Setting> equalityExpr() throws RecognitionException {
        Set<Setting> settings = null;

        Set<Setting> e1 = null;

        Set<Setting> e2 = null;


        try {
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:89:45: (e1= relationalExpr ( '=' e2= relationalExpr | '!=' e2= relationalExpr )* )
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:90:3: e1= relationalExpr ( '=' e2= relationalExpr | '!=' e2= relationalExpr )*
            {
            pushFollow(FOLLOW_relationalExpr_in_equalityExpr219);
            e1=relationalExpr();
            _fsp--;

             
                                                settings = e1;
                                              
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:93:3: ( '=' e2= relationalExpr | '!=' e2= relationalExpr )*
            loop4:
            do {
                int alt4=3;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==11) ) {
                    alt4=1;
                }
                else if ( (LA4_0==12) ) {
                    alt4=2;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:94:5: '=' e2= relationalExpr
            	    {
            	    match(input,11,FOLLOW_11_in_equalityExpr243); 
            	    pushFollow(FOLLOW_relationalExpr_in_equalityExpr251);
            	    e2=relationalExpr();
            	    _fsp--;


            	                                        settings.addAll(e2);
            	                                      

            	    }
            	    break;
            	case 2 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:97:5: '!=' e2= relationalExpr
            	    {
            	    match(input,12,FOLLOW_12_in_equalityExpr263); 
            	    pushFollow(FOLLOW_relationalExpr_in_equalityExpr270);
            	    e2=relationalExpr();
            	    _fsp--;


            	                                        settings.addAll(e2);
            	                                      

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return settings;
    }
    // $ANTLR end equalityExpr


    // $ANTLR start relationalExpr
    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:103:1: relationalExpr returns [Set<Setting> settings] : e1= additiveExpr ( '<' e2= additiveExpr | '>' e2= additiveExpr | '<=' e2= additiveExpr | '>=' e2= additiveExpr )* ;
    public final Set<Setting> relationalExpr() throws RecognitionException {
        Set<Setting> settings = null;

        Set<Setting> e1 = null;

        Set<Setting> e2 = null;


        try {
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:103:47: (e1= additiveExpr ( '<' e2= additiveExpr | '>' e2= additiveExpr | '<=' e2= additiveExpr | '>=' e2= additiveExpr )* )
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:104:3: e1= additiveExpr ( '<' e2= additiveExpr | '>' e2= additiveExpr | '<=' e2= additiveExpr | '>=' e2= additiveExpr )*
            {
            pushFollow(FOLLOW_additiveExpr_in_relationalExpr299);
            e1=additiveExpr();
            _fsp--;

             
                                                settings = e1;
                                              
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:107:3: ( '<' e2= additiveExpr | '>' e2= additiveExpr | '<=' e2= additiveExpr | '>=' e2= additiveExpr )*
            loop5:
            do {
                int alt5=5;
                switch ( input.LA(1) ) {
                case 13:
                    {
                    alt5=1;
                    }
                    break;
                case 14:
                    {
                    alt5=2;
                    }
                    break;
                case 15:
                    {
                    alt5=3;
                    }
                    break;
                case 16:
                    {
                    alt5=4;
                    }
                    break;

                }

                switch (alt5) {
            	case 1 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:108:5: '<' e2= additiveExpr
            	    {
            	    match(input,13,FOLLOW_13_in_relationalExpr325); 
            	    pushFollow(FOLLOW_additiveExpr_in_relationalExpr333);
            	    e2=additiveExpr();
            	    _fsp--;


            	                                        settings.addAll(e2);
            	                                      

            	    }
            	    break;
            	case 2 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:112:5: '>' e2= additiveExpr
            	    {
            	    match(input,14,FOLLOW_14_in_relationalExpr391); 
            	    pushFollow(FOLLOW_additiveExpr_in_relationalExpr399);
            	    e2=additiveExpr();
            	    _fsp--;


            	                                        settings.addAll(e2);
            	                                      

            	    }
            	    break;
            	case 3 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:116:5: '<=' e2= additiveExpr
            	    {
            	    match(input,15,FOLLOW_15_in_relationalExpr457); 
            	    pushFollow(FOLLOW_additiveExpr_in_relationalExpr464);
            	    e2=additiveExpr();
            	    _fsp--;


            	                                        settings.addAll(e2);
            	                                      

            	    }
            	    break;
            	case 4 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:120:5: '>=' e2= additiveExpr
            	    {
            	    match(input,16,FOLLOW_16_in_relationalExpr522); 
            	    pushFollow(FOLLOW_additiveExpr_in_relationalExpr529);
            	    e2=additiveExpr();
            	    _fsp--;


            	                                        settings.addAll(e2);
            	                                      

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return settings;
    }
    // $ANTLR end relationalExpr


    // $ANTLR start additiveExpr
    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:127:1: additiveExpr returns [Set<Setting> settings] : e1= multiplicativeExpr ( '+' e2= multiplicativeExpr | '-' e2= multiplicativeExpr )* ;
    public final Set<Setting> additiveExpr() throws RecognitionException {
        Set<Setting> settings = null;

        Set<Setting> e1 = null;

        Set<Setting> e2 = null;


        try {
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:127:46: (e1= multiplicativeExpr ( '+' e2= multiplicativeExpr | '-' e2= multiplicativeExpr )* )
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:128:2: e1= multiplicativeExpr ( '+' e2= multiplicativeExpr | '-' e2= multiplicativeExpr )*
            {
            pushFollow(FOLLOW_multiplicativeExpr_in_additiveExpr564);
            e1=multiplicativeExpr();
            _fsp--;


            	                                  settings = e1;
            	                                
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:131:2: ( '+' e2= multiplicativeExpr | '-' e2= multiplicativeExpr )*
            loop6:
            do {
                int alt6=3;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==17) ) {
                    alt6=1;
                }
                else if ( (LA6_0==18) ) {
                    alt6=2;
                }


                switch (alt6) {
            	case 1 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:132:4: '+' e2= multiplicativeExpr
            	    {
            	    match(input,17,FOLLOW_17_in_additiveExpr582); 
            	    pushFollow(FOLLOW_multiplicativeExpr_in_additiveExpr590);
            	    e2=multiplicativeExpr();
            	    _fsp--;


            	    	                                  settings.addAll(e2);
            	    	                                

            	    }
            	    break;
            	case 2 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:135:7: '-' e2= multiplicativeExpr
            	    {
            	    match(input,18,FOLLOW_18_in_additiveExpr601); 
            	    pushFollow(FOLLOW_multiplicativeExpr_in_additiveExpr607);
            	    e2=multiplicativeExpr();
            	    _fsp--;


            	                                        settings.addAll(e2);
            	                                      

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return settings;
    }
    // $ANTLR end additiveExpr


    // $ANTLR start multiplicativeExpr
    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:141:1: multiplicativeExpr returns [Set<Setting> settings] : e1= unaryExpr ( '*' e2= unaryExpr | 'div' e2= unaryExpr | 'mod' e2= unaryExpr )* ;
    public final Set<Setting> multiplicativeExpr() throws RecognitionException {
        Set<Setting> settings = null;

        Setting e1 = null;

        Setting e2 = null;


        try {
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:141:51: (e1= unaryExpr ( '*' e2= unaryExpr | 'div' e2= unaryExpr | 'mod' e2= unaryExpr )* )
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:142:2: e1= unaryExpr ( '*' e2= unaryExpr | 'div' e2= unaryExpr | 'mod' e2= unaryExpr )*
            {
            pushFollow(FOLLOW_unaryExpr_in_multiplicativeExpr632);
            e1=unaryExpr();
            _fsp--;


            			                              settings = new HashSet<Setting>();
            			                              settings.add(e1);	
            	                                
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:146:2: ( '*' e2= unaryExpr | 'div' e2= unaryExpr | 'mod' e2= unaryExpr )*
            loop7:
            do {
                int alt7=4;
                switch ( input.LA(1) ) {
                case 19:
                    {
                    alt7=1;
                    }
                    break;
                case 20:
                    {
                    alt7=2;
                    }
                    break;
                case 21:
                    {
                    alt7=3;
                    }
                    break;

                }

                switch (alt7) {
            	case 1 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:147:4: '*' e2= unaryExpr
            	    {
            	    match(input,19,FOLLOW_19_in_multiplicativeExpr659); 
            	    pushFollow(FOLLOW_unaryExpr_in_multiplicativeExpr667);
            	    e2=unaryExpr();
            	    _fsp--;


            	    			                              settings.add(e2);
            	    	                                

            	    }
            	    break;
            	case 2 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:150:4: 'div' e2= unaryExpr
            	    {
            	    match(input,20,FOLLOW_20_in_multiplicativeExpr683); 
            	    pushFollow(FOLLOW_unaryExpr_in_multiplicativeExpr689);
            	    e2=unaryExpr();
            	    _fsp--;


            	    			                              settings.add(e2);
            	    			                            

            	    }
            	    break;
            	case 3 :
            	    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:153:4: 'mod' e2= unaryExpr
            	    {
            	    match(input,21,FOLLOW_21_in_multiplicativeExpr705); 
            	    pushFollow(FOLLOW_unaryExpr_in_multiplicativeExpr711);
            	    e2=unaryExpr();
            	    _fsp--;


            	    			                              settings.add(e2);
            	    			                            

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return settings;
    }
    // $ANTLR end multiplicativeExpr


    // $ANTLR start unaryExpr
    // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:159:1: unaryExpr returns [Setting setting] : (e1= primaryExpr | '-' e2= primaryExpr );
    public final Setting unaryExpr() throws RecognitionException {
        Setting setting = null;

        Setting e1 = null;

        Setting e2 = null;


        try {
            // C:\\projects\\CarbideV2\\com.nokia.tools.variant.confml.expressions\\src\\com\\nokia\\tools\\variant\\confml\\expressions\\settings\\Confml.g:159:36: (e1= primaryExpr | '-' e2= primaryExpr )
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( ((LA8_0>=Literal && LA8_0<=Ref)||LA8_0==22||LA8_0==24) ) {
                alt8=1;
            }
            else if ( (LA8_0==18) ) {
                alt8=2;
            }
